--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  overflow-y: scroll;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.white {
+  background-color: white;
+}
+
+.hidden {
+  display: none;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 200px auto;
+  grid-template-rows: 70px 40px auto 50px;
+  max-width: 1200px;
+  grid-gap: 5px;
+}
+
+.footer {
+  background-color: whitesmoke;
+  text-align: center;
+  height: 50px;
+  box-shadow: 2px 2px 10px #aaa;
+}
+
+.footer::before{
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+
+
