--- a/src/components/Basket.scss
+++ b/src/components/Basket.scss
@@ -24,6 +24,7 @@ border-radius: 15px;
 
    &__item-name {
       height: 20px;
+      padding-top: 2px;
       font-weight: bold;
    }
 
@@ -49,7 +50,7 @@ border-radius: 15px;
    &__delete {
       position: absolute;
       right: 20px;
-      margin-top: -3px;
+      margin-top: -2px;
 
       font-size: 14px;
       cursor: pointer;
