--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -69,24 +69,6 @@
       z-index: 100;
    }
 
-   &__buttons {
-      position: absolute;
-    
-      display: flex;
-    
-      justify-content: space-between;
-      align-items: center;
-    
-      width: 90px;
-      height: 30px;
-    
-      right: 20px;
-      top: 160px;
-    
-      border: 1px solid #ccc;
-      text-align: center;
-   }
-
    &__name {
 
       width: 150px;
@@ -97,9 +79,46 @@
       border-radius: 10px 10px 0 0;
    }
 
-   &__button {
-      width: 30px;
+   &__count {
       height: 28px;
+      padding-top: 1px;
+   }
+
+   &__input-count {
+      position: absolute;
+      left: 20px;
+
+      width: 50px;
+      height: 28px;
+
+      text-align: center;
+      
+      border: none;
+   }
+
+
+   &__buttons {
+      position: absolute;
+    
+      display: grid;
+      grid-template-columns: 20px auto 20px;
+    
+      justify-content: space-between;
+      align-content: center;
+    
+      width: 90px;
+      height: 30px;
+    
+      right: 20px;
+      top: 160px;
+    
+      border: 1px solid #ccc;
+   }
+
+   &__button {
+      width: 20px;
+      height: 28px;
+      padding: 1px;
    }
     
    &__button:hover{
