--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -146,6 +146,14 @@
    &__no-muthes {
       grid-column: span 3;
    }
+
+   &__text {
+      position: absolute;
+      top: -18px;
+      right: 5px;
+
+      font-size: 12px;
+   }
 }
 
 
