--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -11,7 +11,7 @@
    background-color: #f6f6f6;
    margin: 15px;
  
-   box-shadow: 5px 5px 10px 2px #aaa;
+   box-shadow: 2px 2px 10px #aaa;
    border-radius: 15px;
 
    &__category {
